# IVS-2023-project-team

./: README.md  hodnoceni.txt  odevzdani.txt
src/: Makefile  doxyfile
src/IvsCalc/: IvsCalc.sln  build.bat
src/IvsCalc/IvsCalc/: App.xaml  App.xaml.cs  IvsCalc.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest
src/IvsCalc/IvsCalc/Classes/: InputNumber.cs  MathLib.cs
src/IvsCalc/IvsCalc/Classes/Controls/: BackdropWindow.cs  Keyboard.cs
src/IvsCalc/IvsCalc/Classes/System/: TitleBarHelper.cs  WindowsSystemDispatcherQueueHelper.cs
src/IvsCalc/IvsCalc/Properties/: launchSettings.json
src/IvsCalc/IvsCalc/Properties/PublishProfiles/: win10-x64.pubxml  win10-x86.pubxml
src/IvsCalc/IvsCalcMathLib/: CMakeLists.txt  IvsCalcMathLib.cpp  IvsCalcMathLib.h  IvsCalcMathLib.vcxproj  IvsCalcMathLib.vcxproj.filters  IvsCalcMathLibTest.cpp  dllmain.cpp  framework.h  generate_tests.py  main.cpp  pch.cpp  pch.h
src/IvsCalc/installer/: install_x64.iss  install_x86.iss
src/Profiling/: main.cpp
